--- a/src/app/templates/chart.html
+++ b/src/app/templates/chart.html
@@ -5,10 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-
     {% block content %}
     {{ chart|safe }}
     {% endblock content %}
 
+    <a href="{% url 'index' %}">Back</a>
 </body>
 </html>
